--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-torch
-torchaudio
-websockets
-numpy
+websockets==11.0.3
+numpy==1.26.4
+torch==2.2.1
+torchaudio==2.2.1
+google-cloud-speech==2.21.0
+groq==0.3.0
+elevenlabs==1.0.7
+aiohttp==3.9.3
